fixed issue with Nav Bar. Next going to add a collapsable Nav Bar or at least a Nav Bar that will allow me to reveal dispplay None objects in the page box

--- a/main.css
+++ b/main.css
@@ -13,31 +13,49 @@
   --main_alignment: center;
 }
 
+html, 
+body {
+  height: 100%;
+  font-family:'Trebuchet MS';
+}
+
 /*-------------------------- Main Container------------------------- */
 
-.main-container {
-    margin: .5rem;
-    display: grid;
-    grid-gap: 0.2rem;
-    border-radius: 0.1rem;
-    justify-content: var(--main_alignment);
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr;
-    grid-template-areas:
-    "nav_bar nav_bar"
-    "main_graph main_graph"
-    "highlights highlights"
-    "event_planner event_planner"
-    "how_built how_built"
+.page-container {
+  height: inherit;
+  margin: .5rem;
+  display: grid;
+  grid-gap: 0.2rem;
+  border-radius: 0.1rem;
+  justify-content: var(--main_alignment);
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.05fr;
+  grid-template-areas:
+  "nav_bar"
+  "main_graph"
+  "highlights"
+  "event_planner"
+  "how_built"
 }
-  
+
+
+/*-------------------------- Hidden------------------------- */
+
+.hidden {
+  display: none;
+}
+
 /*-------------------------- Nav Bar------------------------- */
 
 .nav_bar {
-  background-color: teal;
   grid-area: nav_bar;
 
 }
+
+.nav_bar_items {
+  font-size: medium;
+}
+
 /*-------------------------- Main Graph------------------------- */
 
 .main_graph {
@@ -45,12 +63,21 @@
   grid-area: main_graph;
 }
 
+.main_graph h1{
+  display: grid;
+  justify-content: center;
+}
 /*--------------------------  Highlights------------------------- */
 
 
 .highlights {
   background: rgb(109, 109, 200);
   grid-area: highlights;
+}
+
+.highlights h1{
+  display: grid;
+  justify-content: center;
 }
 
 /*-------------------------- Event Planner------------------------- */
@@ -61,34 +88,43 @@
   grid-area: event_planner;
 }
 
+.event_planner h1{
+  display: grid;
+  justify-content: center;
+}
 /*-------------------------- How it was built------------------------- */
 
 .how_built {
   background: rgb(84, 209, 200);
   grid-area: how_built;
 }
-
+.how_built h1{
+  display: grid;
+  justify-content: center;
+}
 /*-------------------------- Device Breakpoints------------------------- */
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  .main-container {
+  .page-container {
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.8fr;
+    grid-template-rows: 0.1fr 1fr 1fr;
     grid-template-areas:
-      "nav_bar nav_bar"
+      ". nav_bar"
       "main_graph highlights"
       "event_planner how_built";
   }
+
+
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
-  .main-container {
+  .page-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.8fr;
+    grid-template-rows: 0.01fr 0.1fr;
     grid-template-areas:
-      "nav_bar nav_bar nav_bar nav_bar"
+      ". . nav_bar nav_bar"
       "main_graph highlights event_planner how_built";
   }
 }
